--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-primary: #16111c;
+  --color-lightGrey: #d2d6dd;
+  --color-grey: #7e818b;
+  --color-darkGrey: #16111c;
+  --color-error: #d43939;
+  --color-success: #28bd14;
+  --grid-maxWidth: 100rem;
+  --grid-gutter: 2rem;
+  --font-size: 1.6rem;
+  --font-family: "Helvetica Neue", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  background-image: url(./pattern.png);
+}
+
+.container {
+  background: #fff;
+  min-height: 100vh;
+}
+
+.logo {
+  font-size: 1.9rem;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+}
+
+.logo-wrapper {
+  text-align: center;
+  margin: 1rem 0 2rem 0;
+}
+
+.logo img {
+  display: block;
+  width: 24rem;
+}
+
+.logo span {
+  display: block;
+  margin: -3.2rem 0 0 5.8rem;
+}
+
+.profile-photo {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-right: 1rem;
+}
+
+.splash {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  min-height: 70vh;
+}
+
+.splash a {
+  display: block;
+  margin-top: 2rem;
 }
